<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bef5f5"
    android:orientation="vertical"
    tools:context=".activity.MainActivity" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>

		<TextView
			android:layout_width="100sp"
			android:layout_height="wrap_content"
			android:text="@string/label_spinner"
			android:layout_gravity="center"
			/>

		<Spinner
			android:id="@+id/spinner_ampere"
			android:layout_width="80sp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			/>
		<TextView
			android:layout_width="30dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			/>

		<Spinner
			android:id="@+id/spinner_month"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="70sp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_last_used"/>
		<EditText
			android:id="@+id/last_used"
			android:layout_width="105dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="number"
			android:gravity="right"
			android:hint=""/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_kwh"/>
		<Button
			android:id="@+id/button_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_next"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="70sp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_curr_used"/>
		<EditText
			android:id="@+id/curr_used"
			android:layout_width="105dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="number"
			android:gravity="right"
			android:hint=""/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_kwh"/>
		<Button
			android:id="@+id/button_prev"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_prev"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_adjust"/>
		<EditText
			android:id="@+id/adjust"
			android:layout_width="70dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="numberSigned|numberDecimal"
			android:gravity="right"
			android:hint=""/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_yen"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="right"
			android:text="@string/label_meter_day"/>
		<EditText
			android:id="@+id/meter_day"
			android:layout_width="40dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="number"
			android:gravity="right"
			android:hint=""/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/label_day"/>

	</LinearLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="5sp"
		android:text=""/>

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/space_zen_4"/>
				<TextView
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_weight="1"
					android:text="@string/label_used"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/space_zen_1"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/space1"/>
				<TextView
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_weight="1"
					android:text="@string/label_amount"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/space_zen_1"/>
			</LinearLayout>
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_average"/>
				<EditText
					android:id="@+id/average_used"
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:enabled="false"
					android:focusable="false"
					android:textColor="#0000FF"
					android:gravity="right"
					android:layout_weight="1"
					android:hint=""/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_kwh"/>
				<EditText
					android:id="@+id/average_amount"
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:enabled="false"
					android:focusable="false"
					android:textColor="#0000FF"
					android:gravity="right"
					android:layout_weight="1"
					android:hint=""/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_yen"/>
			</LinearLayout>
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_results"/>
				<EditText
					android:id="@+id/used_kwh"
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:enabled="false"
					android:textColor="#0000FF"
					android:gravity="right"
					android:layout_weight="1"
					android:hint=""/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_kwh"/>
				<EditText
					android:id="@+id/amount_kwh"
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:enabled="false"
					android:focusable="false"
					android:textColor="#0000FF"
					android:gravity="right"
					android:layout_weight="1"
					android:hint=""/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_yen"/>
			</LinearLayout>
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_estimated"/>
				<EditText
					android:id="@+id/estimat_used"
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:textColor="#0000FF"
					android:enabled="false"
					android:focusable="false"
					android:gravity="right"
					android:layout_weight="1"
					android:hint=""/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_kwh"/>
				<EditText
					android:id="@+id/estimat_amount"
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:textColor="#0000FF"
					android:enabled="false"
					android:focusable="false"
					android:gravity="right"
					android:layout_weight="1"
					android:hint=""/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_yen"/>
			</LinearLayout>
		</TableRow>
	</TableLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="1sp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_save"/>

		<Button
			android:id="@+id/button_factor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_factor"/>

		<Button
			android:id="@+id/button_toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_toggle"/>

		<Button
			android:id="@+id/button_expand"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_expand"/>

	</LinearLayout>

	<TextView
		android:id="@+id/message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text=""/>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="5sp"/>

	<LinearLayout
		android:id="@+id/graph_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">
	</LinearLayout>

</LinearLayout>